# RL-Rocket-Landing

./: .gitignore  README.md  pyproject.toml
model_building/: PPO_experiments.ipynb  PPO_experiments_v2.ipynb  SAC_experiments_v1.ipynb  TQC_experiments.ipynb  first_run.ipynb  rocket_landing_experiments-testing.ipynb
sample_runs/: README.md  rocket_landing_experiments-testing.ipynb
sample_runs/tqc_best/tqc_logs/: events.out.tfevents.1716071517.78078c3fd64b.34.0  events.out.tfevents.1716071535.78078c3fd64b.34.1
