[tool.poetry]
name = "autonomous-falcon9"
version = "0.1.0"
description = ""
authors = ["Sudarsaan <sudarsaan@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.26.4"
wheel = "^0.43.0"
pyflyt = "^0.19.0"
stable-baselines3 = {extras = ["extra"], version = "^2.3.1"}
tensorboard = "^2.16.2"
sb3-contrib = "^2.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
